Fix the side bar alignment, to run down to footer
Fix the alignment of the side bar to separate it away
from the cards section. Fix the alignment of the links
with padding

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,6 +2,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  /*added flex styling to push footer down*/
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -11,6 +12,8 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  /*added flex to center align, padding and font size
+  and weight*/
   display: flex;
   align-items: center;
   font-size: 32px;
@@ -22,16 +25,48 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
+  height: auto;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  align-items: flex-start;
+  flex-shrink: 0;
+  
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 32px;
+  
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+.split-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.all-cards {
+
 }
